# caroro

./: .gitattributes  .gitmodules  README.md  build_log.txt
devel/: .catkin  .rosinstall  _setup_util.py  local_setup.fish  local_setup.sh
devel/lib/cam_driving/: main.py
devel/lib/caroro_code/: convert_lidar  final.py  obstacle_avoid.py  rotary.py
devel/lib/pkgconfig/: cam_driving.pc  caroro_code.pc  morai_msgs.pc
devel/share/cam_driving/cmake/: cam_drivingConfig.cmake
src/cam_driving/: CMakeLists.txt
src/cam_driving/cam_driving/: CMakeLists.txt
src/cam_driving/scripts/: 1_line.py  2_line.py  left_turn_1.py  left_turn_2.py  main.py  obs_1_line.py  obs_2_line.py  right_turn_after.py  traffic_right_turn.py
src/caroro_code/: CMakeLists.txt
src/caroro_code/launch/: final.launch
src/caroro_code/scripts/: final.py  obstacle_avoid.py  rotary_mission.py  stopline_detect.py  test.py  traffic_light.py  traffic_one.py
src/caroro_code/src/: convert_lidar.cpp
src/intersection/: CMakeLists.txt  package.xml
src/intersection/launch/: intersection.launch
src/intersection/scripts/: curve_detect.py  intersection.py  left_turn_area.py  right_turn_area.py  rotary_in_pose.py  rotary_middle_pose.py  rotary_out_pose.py  rotary_pose.py  rotary_stop_line.py
src/learning_tf/: CMakeLists.txt  package.xml
src/learning_tf/scripts/: carrot_broadcaster.py  carrot_follower.py  turtle_one_broadcaster.py  turtle_two_broadcaster.py
src/rospy_rosbridge_connector/: CMakeLists.txt  package.xml
src/rospy_rosbridge_connector/config/: topic_specs.yaml
src/rospy_rosbridge_connector/launch/: bridge_all.launch
src/rospy_rosbridge_connector/scripts/: Object_topic.py  publish_clock.py  ros_websocket_bridge.py
src/wego/: CMakeLists.txt  package.xml
src/wego/launch/: gmapping.launch  navigation.launch  teleop.launch
src/wego/maps/: map.pgm
src/wego/rviz/: display.rviz  map.rviz  navigation.rviz  navigation2.rviz  rr.rviz  slam.rviz  slam1.rviz  slam2.rviz
src/wego/scripts/: navigation_client.py  pub_odom.py  test.py  test2.py  test3.py
src/wego_2d_nav/: CMakeLists.txt  package.xml
src/wego_2d_nav/launch/: amcl.launch  move_base.launch
src/wego_2d_nav/params/: costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  teb_local_planner_params.yaml
src/wego_2d_nav/scripts/: cmd_vel_to_ackermann.py
(+32 files in other folders)
